--- a/index.html
+++ b/index.html
@@ -1,140 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Poppins:wght@400;600&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Donate Today</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Start Top Banner Section -->
     <section class="top-banner">
-        <div class="container">
-            <div class="card">
-                <h1>Let’s Help Those Who Are
-                    More In Need</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                    deterruisset. No duo populo animal noluisse, enim</p>
-                <a href="">Donate Now</a>
-            </div>
+      <div class="container">
+        <div class="card mx-auto text-center">
+          <h1 class="text-white">Let’s Help Those Who Are More In Need</h1>
+          <p class="text-white">
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli <br />deterruisset. No duo populo animal noluisse, enim
+          </p>
+          <a class="theme-btn" href="#">Donate Now</a>
         </div>
+      </div>
     </section>
     <!-- End Top Banner Section -->
 
     <!-- Start Donate Amount Section -->
     <section class="donate-amount">
-        <div class="container">
-            <div class="title">
-                <h1>Donate Today</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                    deterruisset. No duo populo animal noluisse, enim</p>
-            </div>
-            <div class="amount">
-                <ul>
-                    <li><span>100tk</span></li>
-                    <li><span>200tk</span></li>
-                    <li><span>500tk</span></li>
-                    <li><span>1000tk</span></li>
-                    <li><span>500tk</span></li>
-                </ul>
-            </div>
-            <div class="other-ammounts">
-                <form action="#">
-                    <input type="number" name="amount" id="amount" placeholder="Other Amount (Taka)">
-                    <button type="submit">donate now</button>
-                </form>
-            </div>
+      <div class="container">
+        <div class="card mx-auto">
+          <div class="title text-center">
+            <h2>Donate Today</h2>
+            <p>
+              Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+              falli <br />
+              deterruisset. No duo populo animal noluisse, enim
+            </p>
+          </div>
+          <div class="amount">
+            <ul>
+              <li><span>100tk</span></li>
+              <li class="active"><span>200tk</span></li>
+              <li><span>500tk</span></li>
+              <li><span>1000tk</span></li>
+              <li><span>500tk</span></li>
+            </ul>
+          </div>
+          <div class="other-ammounts">
+            <form action="#" class="text-center">
+              <input
+                type="text"
+                name="amount"
+                id="amount"
+                placeholder="Other Amount (Taka)"
+              />
+              <button class="theme-btn" type="submit">donate now</button>
+            </form>
+          </div>
         </div>
+      </div>
     </section>
     <!-- End Donate Amount Section -->
 
     <!-- Start Donate Plan Section -->
     <section class="donate-plan">
-        <div class="container">
-            <div class="title">
-                <h1>Our Donate Plan</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                    deterruisset. No duo populo animal noluisse, enim</p>
+      <div class="container">
+        <div class="card-main mx-auto">
+          <div class="title text-center">
+            <h2>Our Donate Plan</h2>
+            <p>
+              Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+              falli <br />
+              deterruisset. No duo populo animal noluisse, enim
+            </p>
+          </div>
+          <div class="donate-reasons">
+            <div class="card">
+              <div class="card-icon">
+                <img src="./icons/food.png" alt="Food Icon" />
+              </div>
+              <div class="card-text">
+                <h3>Food for a family</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit molli
+                </p>
+              </div>
             </div>
-            <div class="donate-reasons">
-                <div class="card">
-                    <div class="card-icon">
-                        <img src="./icons/food.png" alt="Food Icon">
-                    </div>
-                    <div class="card-title">
-                        <h2>Food for a family</h2>
-                    </div>
-                    <div class="card-text">
-                        <p>Amet minim mollit non deserunt
-                            ullamco est sit aliqua dolor do amet
-                            sint. Velit officia consequat duis enim
-                            velit molli</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-icon">
-                        <img src="./icons/shelter.png" alt="Family Icon">
-                    </div>
-                    <div class="card-title">
-                        <h2>Shelter for a family</h2>
-                    </div>
-                    <div class="card-text">
-                        <p>Amet minim mollit non deserunt
-                            ullamco est sit aliqua dolor do amet
-                            sint. Velit officia consequat duis enim
-                            velit molli</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-icon">
-                        <img src="./icons/Frame-1.png" alt="Education Icon">
-                    </div>
-                    <div class="card-title">
-                        <h2>Education for a child</h2>
-                    </div>
-                    <div class="card-text">
-                        <p>Amet minim mollit non deserunt
-                            ullamco est sit aliqua dolor do amet
-                            sint. Velit officia consequat duis enim
-                            velit molli</p>
-                    </div>
-                </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="./icons/shelter.png" alt="Family Icon" />
+              </div>
+              <div class="card-text">
+                <h3>Shelter for a family</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit molli
+                </p>
+              </div>
             </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="./icons/Frame-1.png" alt="Education Icon" />
+              </div>
+              <div class="card-text">
+                <h3>Education for a child</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit molli
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <!-- End Donate Plan Section -->
 
-    <!-- Start Upates Section -->
-    <section class="updates">
-        <div class="container">
-            <div class="title">
-                <h1>Our Donate Plan</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                    deterruisset. No duo populo animal noluisse, enim</p>
-            </div>
-            <div class="updates-form">
-                <form action="#">
-                    <input type="email" name="email" id="email">
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
+    <!-- Start News & Article Section -->
+    <section class="news">
+      <div class="container">
+        <div class="title">
+          <h2>News & articles</h2>
+          <p>Directly from the latest news and articles</p>
         </div>
+        <div class="news-blog">
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="./images/donation0.jpg"
+                alt="Food distribution for flood victims"
+              />
+            </div>
+            <div class="card-body">
+              <div class="date-info">
+                <div class="date">
+                  <span>28</span>
+                  <span>FEB</span>
+                </div>
+                <div class="info">
+                  <h3>Post title here</h3>
+                  <ul>
+                    <li>
+                      <span
+                        ><img src="./icons/icon4.svg" alt="Chat icon" /></span
+                      >214 Comments
+                    </li>
+                    <li>
+                      <span
+                        ><img src="./icons/icon4.svg" alt="love icon" /></span
+                      >895 Likes
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisi cing elit.
+                Molestias eius illum libero dolor nobis deleniti, sint
+                assumenda. Pariatur iste veritatis excepturi, ipsa optio nobis.
+              </p>
+              <a href="#">Read More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="./images/donation0.jpg"
+                alt="Food distribution for flood victims"
+              />
+            </div>
+            <div class="card-body">
+              <div class="date-info">
+                <div class="date">
+                  <span>28</span>
+                  <span>FEB</span>
+                </div>
+                <div class="info">
+                  <h3>Post title here</h3>
+                  <ul>
+                    <li>
+                      <span
+                        ><img src="./icons/icon4.svg" alt="Chat icon" /></span
+                      >214 Comments
+                    </li>
+                    <li>
+                      <span
+                        ><img src="./icons/icon4.svg" alt="love icon" /></span
+                      >895 Likes
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisi cing elit.
+                Molestias eius illum libero dolor nobis deleniti, sint
+                assumenda. Pariatur iste veritatis excepturi, ipsa optio nobis.
+              </p>
+              <a href="#">Read More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="./images/donation0.jpg"
+                alt="Food distribution for flood victims"
+              />
+            </div>
+            <div class="card-body">
+              <div class="date-info">
+                <div class="date">
+                  <span>28</span>
+                  <span>FEB</span>
+                </div>
+                <div class="info">
+                  <h3>Post title here</h3>
+                  <ul>
+                    <li>
+                      <span
+                        ><img src="./icons/icon4.svg" alt="Chat icon" /></span
+                      >214 Comments
+                    </li>
+                    <li>
+                      <span
+                        ><img src="./icons/icon4.svg" alt="love icon" /></span
+                      >895 Likes
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisi cing elit.
+                Molestias eius illum libero dolor nobis deleniti, sint
+                assumenda. Pariatur iste veritatis excepturi, ipsa optio nobis.
+              </p>
+              <a href="#">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <!-- End Upates Section -->
+    <!-- End News & Article Section -->
 
-    <footer>
-        <div class="container">
-            <h1>Be Humble</h1>
-            <p>I’m gonna do it</p>
+    <!-- Start Updates Section -->
+    <section class="updates">
+      <div class="container">
+        <div class="title">
+          <h2>Our Donate Plan</h2>
+          <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset. No duo populo animal noluisse, enim
+          </p>
         </div>
-    </footer>
-</body>
+        <div class="updates-form">
+          <form action="#">
+            <input type="email" name="email" id="email" />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- End Updates Section -->
 
+    <!-- Start Footer -->
+    <footer>
+      <div class="container">
+        <h3>Be Humble</h3>
+        <p>I’m gonna do it</p>
+      </div>
+    </footer>
+    <!-- End Footer -->
+  </body>
 </html>
