content updated and some css issue fixed

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
             <div class="card mx-auto text-center">
                 <h1 class="text-white">Let’s Help Those Who Are More In Need</h1>
                 <p class="text-white">
-                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-                    falli <br />deterruisset. No duo populo animal noluisse, enim
+                    Help DONATE-TODAY build resilience of <br> communities against disasters in Bangladesh
                 </p>
-                <a class="theme-btn" href="#">Donate Now</a>
+                <a class="theme-btn" href="https://www.programming-hero.com/" target="_blank">Donate Now</a>
             </div>
         </div>
     </section>
@@ -36,9 +35,7 @@
                 <div class="title text-center">
                     <h2>Donate Today</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-                        falli <br />
-                        deterruisset. No duo populo animal noluisse, enim
+                        By donating to Donate-Today's Bangladesh Floods Appeal, you can provide a lifeline to the thousands of children, women, men, and elders.
                     </p>
                 </div>
                 <div class="amount">
@@ -68,9 +65,7 @@
                 <div class="title text-center">
                     <h2>Our Donate Plan</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-                        falli <br />
-                        deterruisset. No duo populo animal noluisse, enim
+                        Your donation will support Plan Bangladesh vital work to advance food, <br> children’s education and poor family's.
                     </p>
                 </div>
                 <div class="donate-reasons">
@@ -81,8 +76,7 @@
                         <div class="card-text">
                             <h3>Food for a family</h3>
                             <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                                amet sint. Velit officia consequat duis enim velit molli
+                                Girls and women are often the most impacted in a crisis. Children will bear the sickness, even after the flood has stopped. We're delivering relief assistance.
                             </p>
                         </div>
                     </div>
@@ -93,8 +87,7 @@
                         <div class="card-text">
                             <h3>Shelter for a family</h3>
                             <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                                amet sint. Velit officia consequat duis enim velit molli
+                                When floods strike, vulnerable children, women, men, and elders are cut off from life-saving medicine, vital communication, and transport. We're delivering relief assistance.
                             </p>
                         </div>
                     </div>
@@ -105,8 +98,7 @@
                         <div class="card-text">
                             <h3>Education for a child</h3>
                             <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                                amet sint. Velit officia consequat duis enim velit molli
+                                Hundreds of educational institutions have either been closed the future of education for so many is now at risk or gone completely. We're delivering education programmes.
                             </p>
                         </div>
                     </div>
@@ -132,11 +124,11 @@
                         <div class="card-body">
                             <div class="date-info">
                                 <div class="date">
-                                    <span>28</span>
-                                    <span>FEB</span>
+                                    <span>14</span>
+                                    <span>JUNE</span>
                                 </div>
                                 <div class="info">
-                                    <h3>Post title here</h3>
+                                    <h3>Food distribution</h3>
                                     <ul>
                                         <li>214 Comments</li>
                                         <li> 895 Likes</li>
@@ -144,11 +136,9 @@
                                 </div>
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisi cing elit.
-                                Molestias eius illum libero dolor nobis deleniti, sint
-                                assumenda. Pariatur iste veritatis excepturi, ipsa optio nobis.
+                                Food crops are under threat of being wiped out by floods across major farming and agricultural lands. 
                             </p>
-                            <a class="theme-btn" href="#">Read More</a>
+                            <a class="theme-btn" href="https://www.programming-hero.com/" target="_blank">Read More</a>
                         </div>
                     </div>
                     <div class="card">
@@ -158,11 +148,11 @@
                         <div class="card-body">
                             <div class="date-info">
                                 <div class="date">
-                                    <span>28</span>
-                                    <span>FEB</span>
+                                    <span>18</span>
+                                    <span>JUNE</span>
                                 </div>
                                 <div class="info">
-                                    <h3>Post title here</h3>
+                                    <h3>Payments (DAM)</h3>
                                     <ul>
                                         <li>
                                             214 Comments
@@ -174,25 +164,23 @@
                                 </div>
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisi cing elit.
-                                Molestias eius illum libero dolor nobis deleniti, sint
-                                assumenda. Pariatur iste veritatis excepturi, ipsa optio nobis.
+                                Dhaka Ahsania Mission (DAM) is donate to cash support and dry foods in most affected districts.
                             </p>
-                            <a class="theme-btn" href="#">Read More</a>
+                            <a class="theme-btn" href="https://www.programming-hero.com/" target="_blank">Read More</a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="./images/donation2.jpg" alt="Food distribution for flood victims" />
+                            <img src="./images/donation9.jpg" alt="Food distribution for flood victims" />
                         </div>
                         <div class="card-body">
                             <div class="date-info">
                                 <div class="date">
-                                    <span>28</span>
-                                    <span>FEB</span>
+                                    <span>25</span>
+                                    <span>JUNE</span>
                                 </div>
                                 <div class="info">
-                                    <h3>Post title here</h3>
+                                    <h3>Pure water</h3>
                                     <ul>
                                         <li>
                                             214 Comments
@@ -204,11 +192,9 @@
                                 </div>
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisi cing elit.
-                                Molestias eius illum libero dolor nobis deleniti, sint
-                                assumenda. Pariatur iste veritatis excepturi, ipsa optio nobis.
+                                WaterAid to provide stranded Bangladesh communities with drinking water 
                             </p>
-                            <a href="#" class="theme-btn">Read More</a>
+                            <a href="https://www.programming-hero.com/" target="_blank" class="theme-btn">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -224,8 +210,7 @@
                 <div class="title text-center">
                     <h2>Get My Updates</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-                        falli <br> deterruisset. No duo populo animal noluisse, enim
+                        By donating to Donate-Today Bangladesh Floods Appeal, you can provide a lifeline to the thousands of children, women, men, and elders who will face a life without their fundamental needs.
                     </p>
                 </div>
                 <div class="updates-form">
@@ -242,7 +227,7 @@
     <!-- Start Footer -->
     <footer>
         <div class="container">
-            <p class="text-center">Copyright ©2022 Programming Hero. All Rights Reserved</h3>
+            <p class="text-center">Copyright ©2022 donate-today.com. All Rights Reserved</h3>
         </div>
     </footer>
     <!-- End Footer -->
