add meaningfull alt atribute for all  images

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="./images/donation1.jpg" alt="Food distribution for flood victims" />
+                            <img src="./images/donation1.jpg" alt="Payments (DAM) for flood victims" />
                         </div>
                         <div class="card-body">
                             <div class="date-info">
@@ -171,7 +171,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="./images/donation9.jpg" alt="Food distribution for flood victims" />
+                            <img src="./images/donation9.jpg" alt="WaterAid to provide pure water for flood victims" />
                         </div>
                         <div class="card-body">
                             <div class="date-info">
